[package]
name = "rustgrpcdemo"
version = "0.1.0"
edition = "2021"
publish = false

default-run = "rustgrpcdemo"


[lints.clippy]
nursery = "deny"
pedantic = "deny"
style = "deny"
cargo = "deny"

missing-errors-doc = { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }


[dependencies]
prost = "0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0"
tonic = "0"

[build-dependencies]
dlprotoc = "0"
tonic-build = "0"
