[package]
name = "rustgrpcdemo"
version = "0.1.0"
edition = "2024"
publish = false
description = "Demo of using gRPC with Rust"
homepage = "https://github.com/evanj/rustgrpcdemo"
readme = "README.md"
license = "MIT"
repository = "https://github.com/evanj/rustgrpcdemo"

default-run = "rustgrpcdemo"


[lints.clippy]
nursery = "deny"
pedantic = "deny"
style = "deny"
cargo = "deny"

missing-errors-doc = { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }


[dependencies]
async-stream = "0"
bytes = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
prost = "0"
prost-types = "0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0"
# Tonic 0.13.1 is not compatible with prost >= 0.14: use git
#tonic = "0"
#tonic-types = "0"
tonic = { git = "https://github.com/hyperium/tonic" }
tonic-types = { git = "https://github.com/hyperium/tonic" }

[build-dependencies]
dlprotoc = "0"
#tonic-build = "0"
tonic-build = { git = "https://github.com/hyperium/tonic" }
